leading slashes and renaming modes

--- a/pmp/static/partials/campaign.html
+++ b/pmp/static/partials/campaign.html
@@ -149,7 +149,7 @@
           <input type="checkbox" ng-model="chainMode"
                  ng-change="modeUpdate();setURL()" ng-disabled="isChainUrl">
           <small>
-            get_stats mode
+            Growing Mode
           </small>
         </label>
       </form>
