--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -1,4 +1,4 @@
-<div class="row spacing" ng-init="init()">
+<div class="row spacing" ng-show="showView" ng-init="initHistorical()">
   <div class="col-lg-9 col-md-9 col-sm-9">
    <div class="row">
      <div class="row">
@@ -73,10 +73,10 @@
     </a>
     
     <div id="filter" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
-      <div ng-show="!allRequestData.length">
+      <div ng-show="isEmpty(allStatus)">
         <small>No data to filter</small>
       </div>
-      <div ng-show="allRequestData.length">
+      <div ng-show="!isEmpty(allStatus)">
         <form class="form-group form-inline form-group-sm">
           <small class="text-uppercase col-sm-12 col-md-12 col-lg-12">Priority filter</small>
           <div class="input-group col-sm-12">
@@ -157,7 +157,7 @@
               class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
               ng-click="takeScreenshot()" ng-disabled="false">
         <i class="fa fa-camera"></i>
-        Take screenshot
+        Take screenshot [BETA]
       </button>
     </div>
     
