--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -1,4 +1,4 @@
-<div class="row spacing" ng-init="init()">
+<div class="row spacing" ng-show="showView" ng-init="initPresent()">
   <div class="col-lg-9 col-md-9 col-sm-9">
    <div class="row">
      <div class="row">
@@ -158,7 +158,7 @@
               class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
               ng-click="takeScreenshot()" ng-disabled="false">
         <i class="fa fa-camera"></i>
-        Take screenshot
+        Take screenshot [BETA]
       </button>
     </div>
     
