--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -11,7 +11,6 @@
          <div class="row">
            <div class="col-lg-11 col-md-11 col-sm-10 col-xs-11" ng-controller="TypeaheadCtrl">
              <div class="input-group spacing">
-
                <input type="text" ng-model="campaign" ng-change="getSuggestions()"
                       typeahead="s for s in suggestions | filter:$viewValue | limitTo:8"
                       class="form-control" autocomplete="off"
@@ -189,7 +188,7 @@
     <multiple-pie-charts color-domain="piecharts.domain" table-title="Campaigns"
                          data="allRequestData" full-terms="piecharts.fullTerms"
                          compact-terms="piecharts.compactTerms" sum-by="piecharts.sum"
-                         nest-by="piecharts.nestBy">
+                         nest-by="piecharts.nestBy" show-upcoming="growingMode">
     </multiple-pie-charts>
     
   </div>
