--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -28,6 +28,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
 
+
     <link rel="shortcut icon" type="image/x-icon" href="img/ic_fav.png">
   </head>
   <body ng-controller="MainController">
@@ -38,10 +39,10 @@
           <img src="img/ic_fav.png" class="brand-adjust" alt="PMP"/>
         </a>
         <ul class="nav navbar-header navbar-nav col-xs-12 col-sm-11 col-md-11 col-lg-11">
-          <li><a href="#" ng-click="nav('/present')">
+          <li><a href="#" ng-click="nav('/present/')">
               <i class="fa fa-bar-chart spacing-r"></i>
               Present Statistics</a></li>
-          <li><a href="#" ng-click="nav('/historical')">
+          <li><a href="#" ng-click="nav('/historical/')">
               <i class="fa fa-line-chart spacing-r"></i>
               Historical Statistics</a></li>
           <li><a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
