taskchain support markup

--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -154,6 +154,16 @@
         </label>
       </form>
 
+      <form class="form-group text-uppercase">
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12 spacing">
+          <input type="checkbox" ng-model="loadTaskChain" ng-disabled="!isTaskChain"
+                 ng-change="setURL()">
+          <small>
+            Load taskchain
+          </small>
+        </label>
+      </form>
+
       <div class="input-group input-group-sm spacing">
         <span class="hidden-sm input-group-addon text-uppercase">
           Probing
