--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -197,6 +197,7 @@
 
 <div class="row" ng-show="allRequestData.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" id="measure">
-    <linear-lifetime chart-data="allRequestData" zoom-y="zoomOnY"></linear-lifetime>
+    <linear-lifetime chart-data="allRequestData" task-chain="loadTaskChain"
+                     zoom-y="zoomOnY"></linear-lifetime>
   </div>
 </div>
