--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -10,13 +10,13 @@
   <hr class="line"/>
   <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing">
 
-    <div class="col-lg-4 col-lg-offset-2 col-md-4 col-md-offset-2 col-sm-4 col-sm-offset-2">
+    <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="#" ng-click="nav('/present')">
         <i class="fa fa-bar-chart fa-5x"></i>
         <h3>Present</h3>
       </a>
       <p>
-        Get information about selected campaigns from McM database and view bare numbers for statuses of selected campaigns' requests.
+        Get information about selected campaigns from McM database and view bare numbers for statuses of selected campaigns' requests
       </p>
     </div>
 
@@ -26,7 +26,17 @@
         <h3>Historical</h3>
       </a>
       <p>
-        Get the history plot of the campaign, request or workflow
+        Get the history growth plot of the campaign, request or workflow from Stats database
+      </p>
+    </div>
+
+    <div class="col-lg-4 col-md-4 col-sm-4">
+      <a href="#" ng-click="nav('/performance')">
+        <i class="fa fa-heartbeat fa-5x"></i>
+        <h3>Performance</h3>
+      </a>
+      <p>
+        Check the health of your past requests, view time distribution of changes and the statistical numbers related to campaign.
       </p>
     </div>
 
