--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -76,3 +76,9 @@
     </div>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+    <some-thing></some-thing>
+  </div>
+</div>
