--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -81,4 +81,7 @@
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <event-drop chart-data="allRequestData"></event-drop>
   </div>
+  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
+    <stats-table chart-data="allRequestData"></stats-table>
+  </div>
 </div>
