last update shown in timebox

--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -53,7 +53,7 @@
            <strong>
              {{dt | date:"d MMMM y H:mm"}}
            </strong>
-           {{dt | date: "'GMT': Z"}}
+           ({{dt | date: "'GMT': Z"}}). Last update: {{lastUpdate | date:"d MMMM y H:mm"}}
          </div>
        </div>
      </div>
