--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -80,15 +80,16 @@
 <div class="row" ng-hide="!allRequestData.length">
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <drop-selections difference="difference"
-                     selections="selections"></drop-selections>
+    <drop-selections difference="difference" selections="selections"></drop-selections>
   </div>
+
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <stats-table chart-data="allRequestData"></stats-table>
+    <stats-table chart-data="allRequestData" minuend="difference.minuend"
+                 subtrahend="difference.subtrahend"></stats-table>
   </div>
+
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <event-drop chart-data="allRequestData"></event-drop>
   </div>
-
 
 </div>
