--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -208,3 +208,19 @@ ul.nav li.placeholder:before {
 .graph-body .line circle {
     opacity: 0.1;
 }
+
+
+.bar rect {
+  fill: steelblue;
+  shape-rendering: crispEdges;
+}
+
+.bar text {
+  fill: #fff;
+}
+
+.axis path, .axis line {
+  fill: none;
+  stroke: #000;
+  shape-rendering: crispEdges;
+}
