--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -46,6 +46,19 @@
        </div>
      </div>
 
+     <div class="row">
+       <div class="panel"
+            ng-init="updateDate()" ng-show="showDate">
+         <div class="panel-body">
+           Current time:
+           <strong>
+             {{dt | date:"d MMMM y H:mm"}}
+           </strong>
+           ({{dt | date: "'GMT': Z"}}). Last update: {{lastUpdate | date:"d MMMM y H:mm"}}
+         </div>
+       </div>
+     </div>
+
    </div>
   </div>
 
@@ -129,7 +142,14 @@
 
 
     <div id="advanced" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
-      Advanced
+      <form class="form-group text-uppercase">
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
+          <input type="checkbox" ng-model="showDate" ng-change="setURL()">
+          <small>
+            Show time
+          </small>
+        </label>
+      </form>
     </div>
     
     <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
