--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -143,7 +143,7 @@
 
     <div id="advanced" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12 spacing">
       <form class="form-group text-uppercase">
-        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12 spacing">
           <input type="checkbox" ng-model="showDate" ng-change="setURL()">
           <small>
             Show time
@@ -158,6 +158,13 @@
        <input type="number" class="form-control" ng-model="bins" ng-change="setURL()"
               placeholder="Default: 10">
      </div>
+
+      <button type="button" ng-show="allRequestData.length"
+              class="btn btn-sm btn-default text-center col-lg-12 col-md-12 col-sm-12 spacing"
+              ng-click="takeScreenshot()" ng-disabled="false">
+        <i class="fa fa-camera"></i>
+        Take screenshot [BETA]
+      </button>
 
     </div>
     
