--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -1,4 +1,4 @@
-<div class="row spacing" ng-show="showView" ng-init="initPresent()">
+<div class="row spacing" ng-show="showView" ng-init="initPerformance()">
   <div class="col-lg-9 col-md-9 col-sm-9">
    <div class="row">
      <div class="row">
