hover-over frontend and copy to clipboard

--- a/pmp/static/partials/performance.html
+++ b/pmp/static/partials/performance.html
@@ -191,8 +191,8 @@
   </div>
 
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
-    <performance-histogram chart-data="histogramData" linear-scale="linearScale"
-                           number-of-bins="bins">
+    <performance-histogram chart-data="histogramData" chart-data-extended="histogramDataExtended"
+                           linear-scale="linearScale", number-of-bins="bins">
     </performance-histogram>
   </div>
 
