--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -138,20 +138,20 @@
       <form class="form-group text-uppercase">
         <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
           <input type="checkbox" ng-model="showDate" ng-change="setURL()">
-          <small>
-            Show time
-          </small>
+          <small>Show time</small>
         </label>
         <br/>
-          <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
-            <input type="checkbox" ng-model="zoomOnY" ng-change="setURL()">
-            <small>
-              y axis zoom
-            </small>
-          </label>
-          
-        </form>
-
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
+          <input type="checkbox" ng-model="zoomOnY" ng-change="setURL()">
+          <small>y axis zoom</small>
+        </label>
+        <br/>
+        <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
+          <input type="checkbox" ng-model="humanReadableNumbers">
+          <small>Human Readable Numbers</small>
+        </label>
+      </form>
+      
       <div class="input-group input-group-sm spacing">
         <span class="hidden-sm input-group-addon text-uppercase">
           Probing
@@ -185,7 +185,7 @@
 
 <div class="row" ng-show="allRequestData.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center" id="measure">
-    <linear-lifetime chart-data="allRequestData" task-chain="loadTaskChain"
-                     zoom-y="zoomOnY"></linear-lifetime>
+    <linear-lifetime chart-data="allRequestData" task-chain="loadTaskChain" zoom-y="zoomOnY"
+                     human-readable-numbers="humanReadableNumbers"></linear-lifetime>
   </div>
 </div>
