some fixes for #13

--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -35,17 +35,17 @@
 
     <nav class="navbar navbar-inverse" role="navigation">
       <div class="container-fluid">
-        <a href="#" ng-click="nav('/')">
+        <a href="/" ng-click="nav('/')">
           <img src="img/ic_fav.png" class="brand-adjust" alt="PMP"/>
         </a>
         <ul class="nav navbar-header navbar-nav col-xs-12 col-sm-11 col-md-11 col-lg-11">
-          <li><a href="#" ng-click="nav('/present/')">
+          <li><a href="/present" ng-click="nav('/present/')">
               <i class="fa fa-bar-chart spacing-r"></i>
               Present Statistics</a></li>
-          <li><a href="#" ng-click="nav('/historical/')">
+          <li><a href="/historical" ng-click="nav('/historical/')">
               <i class="fa fa-line-chart spacing-r"></i>
               Historical Statistics</a></li>
-          <li><a href="#" ng-click="nav('/performance/')">
+          <li><a href="/performance" ng-click="nav('/performance/')">
               <i class="fa fa-heartbeat spacing-r"></i>  
               Performance</a></li>
           <li><a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
