--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -170,8 +170,9 @@
     
     <div id="share" class="collapse col-xs-12 col-sm-12 col-md-12 col-lg-12">
       <div class="input-group input-group-sm">
-        <span class="hidden-sm input-group-addon text-uppercase" ng-click="setURL()">
-          Share
+        <span class="hidden-sm input-group-addon text-uppercase"
+              ng-click="setURL(); shortenURL()">
+          Shorten
         </span>
         <input id="url" type="text" class="form-control" ng-model="url"
                placeholder="Refresh to get URL">
