bugfixes to prev commits

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -11,7 +11,7 @@
   <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing">
 
     <div class="col-lg-4 col-md-4 col-sm-4">
-      <a href="#" ng-click="nav('/present')">
+      <a href="present" ng-click="nav('/present')">
         <i class="fa fa-bar-chart fa-5x"></i>
         <h3>Present</h3>
       </a>
@@ -21,7 +21,7 @@
     </div>
 
     <div class="col-lg-4 col-md-4 col-sm-4">
-      <a href="#" ng-click="nav('/historical')">
+      <a href="historical" ng-click="nav('/historical')">
         <i class="fa fa-line-chart fa-5x"></i>
         <h3>Historical</h3>
       </a>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="col-lg-4 col-md-4 col-sm-4">
-      <a href="#" ng-click="nav('/performance')">
+      <a href="performance" ng-click="nav('/performance')">
         <i class="fa fa-heartbeat fa-5x"></i>
         <h3>Performance</h3>
       </a>
