setting defualt for human readable numbers

--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -147,7 +147,8 @@
         </label>
         <br/>
         <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
-          <input type="checkbox" ng-model="humanReadableNumbers">
+          <input type="checkbox" ng-model="humanReadableNumbers"
+                 ng-init="humanReadableNumbers=true">
           <small>Human Readable Numbers</small>
         </label>
       </form>
