--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -146,7 +146,7 @@
         </label>
         <br/>
         <label class="checkbox-inline col-lg-12 col-md-12 col-sm-12">
-          <input type="checkbox" ng-model="humanReadableNumbers" ng-init="true">
+          <input type="checkbox" ng-model="humanReadableNumbers" ng-init="humanReadableNumbers=true">
           <small>
             Human Readable Numbers
           </small>
