--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -26,7 +26,7 @@
         <h3>Historical</h3>
       </a>
       <p>
-        Get the history growth plot of the campaign, request or workflow from Stats database
+        Get the history growth plot of the campaign, request or workflow
       </p>
     </div>
 
@@ -36,7 +36,7 @@
         <h3>Performance</h3>
       </a>
       <p>
-        Check the health of your past requests, view time distribution of changes and the statistical numbers related to campaign.
+        Check the health of your past requests, view time distribution of changes of satuses and the statistical numbers related to campaign.
       </p>
     </div>
 
