--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -47,7 +47,7 @@
               Historical Statistics</a></li>
           <li><a href="performance" ng-click="nav('/performance/')">
               <i class="fa fa-heartbeat spacing-r"></i>  
-              Performance</a></li>
+              Performance Statistics</a></li>
           <li><a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
               <i class="fa fa-github spacing-r"></i>
               Report</a></li>
