added navigation for chains landscape

--- a/pmp/static/partials/index.html
+++ b/pmp/static/partials/index.html
@@ -12,17 +12,17 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="present" ng-click="nav('/present')">
-        <i class="fa fa-bar-chart fa-5x"></i>
+        <i class="fa fa-bar-chart fa-5x bounceIn animated"></i>
         <h3>Present</h3>
       </a>
       <p>
-        Get information about selected campaigns from McM database and view bare numbers for statuses of selected campaigns' requests
+        Get information about selected campaigns and view numbers for statuses of selected campaigns' requests
       </p>
     </div>
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="historical" ng-click="nav('/historical')">
-        <i class="fa fa-line-chart fa-5x"></i>
+        <i class="fa fa-line-chart fa-5x bounceIn animated"></i>
         <h3>Historical</h3>
       </a>
       <p>
@@ -32,11 +32,25 @@
 
     <div class="col-lg-4 col-md-4 col-sm-4">
       <a href="performance" ng-click="nav('/performance')">
-        <i class="fa fa-heartbeat fa-5x"></i>
+        <i class="fa fa-heartbeat fa-5x bounceIn animated"></i>
         <h3>Performance</h3>
       </a>
       <p>
-        Check the health of your past requests, view time distribution of changes of satuses and the statistical numbers related to campaign.
+        Check the health of past requests, view time distribution of changes of satuses and the statistical numbers related to campaign
+      </p>
+    </div>
+
+  </div>
+
+  <div class="col-lg-10 col-lg-offset-1 col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1 spacing">
+
+    <div class="col-lg-offset-4 col-lg-4 col-md-offset-4 col-md-4 col-sm-offset-4 col-sm-4">
+      <a href="chains" ng-click="nav('/chains')">
+        <i class="fa fa-share-alt fa-5x bounceIn animated"></i>
+        <h3>Chains</h3>
+      </a>
+      <p>
+        Get overview of the chain campaigns and how they interact
       </p>
     </div>
 
