--- a/pmp/templates/graph.html
+++ b/pmp/templates/graph.html
@@ -48,6 +48,9 @@
           <li><a href="performance" ng-click="nav('/performance/')">
               <i class="fa fa-heartbeat spacing-r"></i>  
               Performance Statistics</a></li>
+          <li><a href="performance" ng-click="nav('/chains/')">
+              <i class="fa fa-share-alt spacing-r"></i>  
+              Chains Landscape</a></li>
           <li><a href="https://github.com/cms-PdmV/pmp/issues" target="_blank">
               <i class="fa fa-github spacing-r"></i>
               Report</a></li>
