parsing api output

--- a/pmp/static/partials/chains.html
+++ b/pmp/static/partials/chains.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="row" ng-show="allRequestData.length">
+<div class="row" ng-show="allRequestData.nodes.length">
   <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-center">
     <chains-landscape chart-data="allRequestData"></chains-landscape>
   </div>
