--- a/pmp/static/css/pmp.css
+++ b/pmp/static/css/pmp.css
@@ -241,7 +241,13 @@ ul.nav li.placeholder:before {
 }
 
 .label-events-in-das {
-    color: #01579b;
+    color: #ff6f00;
     position: absolute;
     left: 450px;
+}
+
+.label-done-events-in-das {
+    color: #01579b;
+    position: absolute;
+    left: 650px;
 }
