--- a/pmp/static/partials/historical.html
+++ b/pmp/static/partials/historical.html
@@ -200,7 +200,7 @@
         <div class="progress">
           <div class="progress-bar" role="progressbar" aria-valuenow="{{value}}" aria-valuemin="0"
                aria-valuemax="100" style="width: {{value}}%;">
-            {{value}}
+            {{value}}%
           </div>
         </div>
       </div>
