playground for custom tag dir

--- a/pmp/static/partials/present.html
+++ b/pmp/static/partials/present.html
@@ -41,6 +41,7 @@
        <div class="panel-default">
          <div class="panel-body">
            <div id="campaignList" style="padding-bottom: 0px;"></div>
+           <input-tags style="padding-bottom: 0px;"></input-tags>
          </div>
        </div>
      </div>
